--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -53,11 +53,16 @@
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree Menu" lay-filter="test" id="Menu">
                     <li class="layui-nav-item current" data-id="fill"><a class="layui-nav-item " language="fill">填写问题</a></li>
-                    <li class="layui-nav-item" data-id="area"><a class="layui-nav-item ">辖区维护</a></li>
-                    <li class="layui-nav-item" data-id="charge"><a class="layui-nav-item " language="chargefix">负责人维护</a></li>
-                    <li class="layui-nav-item" data-id="status"><a class="layui-nav-item " language="statusfix">状态维护</a></li>
-                    <li class="layui-nav-item"><a href="javascript:;">click menu item</a></li>
-                    <li class="layui-nav-item"><a href="">the links</a></li>
+                    <li class="layui-nav-item" data-id="areaMatch"><a class="layui-nav-item ">辖区配对维护</a></li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;">基础数据维护</a>
+                        <dl class="layui-nav-child" id="MenuChild">
+                            <dd data-id="area"><a class="layui-nav-item ">辖区维护</a></dd>
+                            <dd data-id="kind"><a class="layui-nav-item ">业管维护</a></dd>
+                            <dd data-id="charge"><a class="layui-nav-item " language="chargefix">负责人维护</a></dd>
+                            <dd data-id="status"><a class="layui-nav-item " language="statusfix">状态维护</a></dd>
+                        </dl>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -65,35 +70,7 @@
         <div class="layui-body" style="margin-bottom:100px">
             <!-- 内容主体区域 -->
             <div style="padding: 15px;" id="content">
-                <blockquote class="layui-elem-quote layui-text">
-                    <ul>
-                        <li>
-                            你也可以单独打开管理界面大布局的演示页面：
-                            <a class="layui-btn layui-btn-normal" href="layuiAdmin.html" target="_blank">单独打开</a>
-                        </li>
-                        <li>
-                            该页面只是简单的管理系统的界面基础布局示例，并不是一整套界面布局方案，您可以关注基于 layui 的通用型管理系统界面模板解决方案：
-                            <a href="/layuiadmin/" target="_blank" class="layui-btn">layuiAdmin</a>
-                        </li>
-                        <li>
-                            layui 之所以赢得如此多人的青睐，更多是在于它“前后界面兼备”的能力。既可编织出绚丽的前台页面，又可满足繁杂的管理系统的界面需求。
-                            <br>layui 管理基本布局， 致力于让每一位开发者都能轻松搭建自己的管理系统模板。
-                        </li>
-                    </ul>
-                </blockquote>
-
-                <a href="/doc/element/layout.html#admin" target="_blank" class="layui-btn">查看该布局代码</a>
-                <br><br><br>
-
-                <div class="layui-card layui-panel">
-                    <div class="layui-card-header">
-                        下面是充数内容，为的是出现滚动条
-                    </div>
-                    <div class="layui-card-body">
-                        充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>充数内容<br>你还真滑到了底部呀
-                    </div>
-                </div>
-                <br><br>
+               
             </div>
         </div>
         <div class="layui-footer">
@@ -103,6 +80,21 @@
 </body>
 <script src="~/src/layui.js"></script>
 <script>
+    function formatDate(str) {
+        if (str != null && str != '') {
+            var now = new Date(parseInt(str.replace("/Date(", "").replace(")/", ""), 10));
+            var year = now.getFullYear();  //取得4位数的年份
+            var month = now.getMonth() + 1;  //取得日期中的月份，其中0表示1月，11表示12月
+            var date = now.getDate();      //返回日期月份中的天数（1到31）
+            var hour = now.getHours();     //返回日期中的小时数（0到23）
+            var minute = now.getMinutes(); //返回日期中的分钟数（0到59）
+            var second = now.getSeconds(); //返回日期中的秒数（0到59）
+            return year + "-" + month + "-" + date + " " + hour + ":" + minute + ":" + second; s
+        }
+        else {
+            return ;
+        }
+    }
     //JS
     layui.use(['element', 'layer', 'util'], function () {
         var element = layui.element
@@ -122,12 +114,21 @@
     setTimeout(() => {setLanguage();}, 300)
 
     $(function () {
-        $(".Menu").on("click", "li", function () {
+        $(".Menu").on("click", "dd", function () {
             var sId = $(this).data("id");//获取data-id的值
             window.location.hash = sId;
             loacdInner(sId);
         });
 
+        $(".Menu").on("click", "li", function () {
+            var sId = $(this).data("id");//获取data-id的值
+            if (sId != null) {
+                window.location.hash = sId;
+                loacdInner(sId);
+            }
+           
+        });
+        
         function loacdInner(sId) {
             var sId = window.location.hash;
             var pathn, i;
@@ -135,6 +136,10 @@
             switch (sId) {
                 case "#area":
                     pathn = "@(Url.Action("AreaIndex", "Area"))",
+                        i = 0;
+                    break;
+                case "#kind":
+                    pathn = "@(Url.Action("KindIndex", "Kind"))",
                         i = 0;
                     break;
                 case "#fill":
@@ -155,8 +160,10 @@
                     break;
             }
             $("#content").load(pathn);//加载相应内容
-            $(".Menu li").eq(i).addClass("current").siblings().removeClass("current");//当前列表高亮
-            }
+           // $(".MenuChild dd").eq(i).addClass("current").siblings().removeClass("current");//当前列表高亮
+
+        }
+
         var sId = window.location.hash;
         loacdInner(sId);
     });
